Update Index.html with professional portfolio website for Bhavin Mali

--- a/Index.html
+++ b/Index.html
@@ -1,1 +1,59 @@
-
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Bhavin Mali's Portfolio</title>
+    <link rel="stylesheet" href="styles.css">
+</head>
+<body>
+    <header>
+        <h1>Bhavin Mali</h1>
+        <nav>
+            <ul>
+                <li><a href="#about">About</a></li>
+                <li><a href="#experience">Experience</a></li>
+                <li><a href="#skills">Skills</a></li>
+                <li><a href="#projects">Projects</a></li>
+                <li><a href="#contact">Contact</a></li>
+            </ul>
+        </nav>
+    </header>
+    <section id="about">
+        <h2>About Me</h2>
+        <p>Welcome to my portfolio! I am Bhavin Mali, a passionate web developer with expertise in modern web technologies.</p>
+    </section>
+    <section id="experience">
+        <h2>Work Experience</h2>
+        <ul>
+            <li>Web Developer at XYZ Corp (2023 - Present)</li>
+            <li>Intern at ABC Inc (2022 - 2023)</li>
+        </ul>
+    </section>
+    <section id="skills">
+        <h2>Skills</h2>
+        <ul>
+            <li>HTML5</li>
+            <li>CSS3</li>
+            <li>JavaScript</li>
+            <li>React.js</li>
+            <li>Node.js</li>
+        </ul>
+    </section>
+    <section id="projects">
+        <h2>Projects</h2>
+        <ul>
+            <li><strong>Portfolio Website</strong> - A personal portfolio website to showcase my work.</li>
+            <li><strong>Web Application</strong> - A web application that allows users to manage tasks efficiently.</li>
+        </ul>
+    </section>
+    <section id="contact">
+        <h2>Contact Me</h2>
+        <p>Email: bhavin.mali@example.com</p>
+        <p>Phone: (123) 456-7890</p>
+    </section>
+    <footer>
+        <p>&copy; 2026 Bhavin Mali</p>
+    </footer>
+</body>
+</html>
