Update Index.html with complete professional portfolio

--- a/Index.html
+++ b/Index.html
@@ -3,57 +3,64 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Bhavin Mali's Portfolio</title>
+    <title>Bhavin Mali - IT Professional | Product Engineer</title>
     <link rel="stylesheet" href="styles.css">
+    <style>
+        body { font-family: Arial, sans-serif; margin: 0; padding: 0; }
+        header { background: #282c34; color: white; padding: 20px; text-align: center; }
+        nav { margin: 20px; }
+        nav ul { list-style: none; padding: 0; }
+        nav ul li { display: inline; margin: 0 15px; }
+        section { margin: 20px; padding: 20px; border: 1px solid #ccc; border-radius: 5px; }
+        footer { text-align: center; padding: 20px; background: #282c34; color: white; }
+    </style>
 </head>
 <body>
     <header>
         <h1>Bhavin Mali</h1>
-        <nav>
-            <ul>
-                <li><a href="#about">About</a></li>
-                <li><a href="#experience">Experience</a></li>
-                <li><a href="#skills">Skills</a></li>
-                <li><a href="#projects">Projects</a></li>
-                <li><a href="#contact">Contact</a></li>
-            </ul>
-        </nav>
+        <h2>IT Professional | Product Engineer</h2>
     </header>
+    <nav>
+        <ul>
+            <li><a href="#about">About</a></li>
+            <li><a href="#projects">Projects</a></li>
+            <li><a href="#contact">Contact</a></li>
+        </ul>
+    </nav>
     <section id="about">
-        <h2>About Me</h2>
-        <p>Welcome to my portfolio! I am Bhavin Mali, a passionate web developer with expertise in modern web technologies.</p>
-    </section>
-    <section id="experience">
-        <h2>Work Experience</h2>
+        <h3>About Me</h3>
+        <p>I am a Full Stack JavaScript Developer with 8 months of experience...</p>
+        <p>Education: CSPIT CHARUSAT (2022-2026)</p>
+        <p>Work Experience at CoreMentors (2025) as Product Engineer:</p>
         <ul>
-            <li>Web Developer at XYZ Corp (2023 - Present)</li>
-            <li>Intern at ABC Inc (2022 - 2023)</li>
+            <li>Responsibilities include managing product lifecycle, working closely with clients and teams.</li>
+            <li>Tech Stack: React.js, Next.js, Node.js, Express, PostgreSQL, Tailwind CSS, Docker.</li>
         </ul>
-    </section>
-    <section id="skills">
-        <h2>Skills</h2>
-        <ul>
-            <li>HTML5</li>
-            <li>CSS3</li>
-            <li>JavaScript</li>
-            <li>React.js</li>
-            <li>Node.js</li>
-        </ul>
+        <h4>Skills</h4>
+        <p>Frontend Development, Backend Development, Problem Solving, Graphics & UI Design, Research & Analysis, Team Coordination, Client Coordination, AI Applications, System Deployment, Networking.</p>
+        <h5>Technical Skills</h5>
+        <p>Machine Learning, Data Science, Prompt Engineering, API Integration, Figma, Canva, Git, Docker, React.js, Next.js, Node.js, Express, JavaScript, TypeScript, PostgreSQL, Tailwind CSS.</p>
     </section>
     <section id="projects">
-        <h2>Projects</h2>
+        <h3>Projects</h3>
         <ul>
-            <li><strong>Portfolio Website</strong> - A personal portfolio website to showcase my work.</li>
-            <li><strong>Web Application</strong> - A web application that allows users to manage tasks efficiently.</li>
+            <li><a href="https://araami.com">Araami</a></li>
+            <li><a href="https://comfortonmattress.com">Comforton Mattress</a></li>
+            <li><a href="https://firstnap.in">Firstnap</a></li>
+            <li><a href="https://corementors.in">CoreMentors</a></li>
+            <li><a href="https://my.oceansaaqua.com">Oceansaaqua</a></li>
         </ul>
     </section>
     <section id="contact">
-        <h2>Contact Me</h2>
-        <p>Email: bhavin.mali@example.com</p>
-        <p>Phone: (123) 456-7890</p>
+        <h3>Contact</h3>
+        <p>Phone: +91 8866882574 / +91 7043633667</p>
+        <p>Email: <a href="mailto:bhavinmali1810@gmail.com">bhavinmali1810@gmail.com</a></p>
+        <p>LinkedIn: <a href="https://linkedin.com/in/bhavin-mali1808">linkedin.com/in/bhavin-mali1808</a></p>
+        <p>Portfolio Blog: <a href="https://bhavin.xstudio.blog">bhavin.xstudio.blog</a></p>
+        <p>Location: Vadodara, Gujarat, India</p>
     </section>
     <footer>
-        <p>&copy; 2026 Bhavin Mali</p>
+        <p>&copy; 2026 Bhavin Mali. All rights reserved.</p>
     </footer>
 </body>
 </html>
